Source/WebKit/UIProcess/GPU/GPUProcessProxy.h
@@ -146,7 +146,7 @@ private:
     bool m_hasSentTCCDSandboxExtension { false };
     bool m_hasSentCameraSandboxExtension { false };
     bool m_hasSentMicrophoneSandboxExtension { false };
-    bool m_hasSentLaunchServicesDatabase { false };
+    bool m_hasSentNetworkProcessXPCEndpoint { false };
 #endif
     HashSet<PAL::SessionID> m_sessionIDs;
 };
